--- a/Backend/render.yaml
+++ b/Backend/render.yaml
@@ -1,6 +1,9 @@
 services:
   - type: web
-    name: ia-glaucoma
-    env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: python app.py
+  name: ia-glaucoma
+  env: python
+  buildCommand: pip install -r requirements.txt
+  startCommand: gunicorn app:app
+  envVars: 
+    - key: PORT
+    value: 10000
