--- a/Backend/render.yaml
+++ b/Backend/render.yaml
@@ -2,5 +2,5 @@ services:
   - type: web
     name: ia-glaucoma
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: python app.py
+    buildCommand: cd Backend && pip install -r requirements.txt
+    startCommand: cd Backend && python app.py
