--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,7 +1,7 @@
-flask==2.3.3
-gunicorn==21.2.0
-tensorflow==2.13.0
-pillow==10.2.0
-numpy==1.24.4
-flask-cors==4.0.0
-huggingface_hub==0.22.2
+flask
+gunicorn
+tensorflow
+pillow
+numpy
+flask-cors
+huggingface_hub
