--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     region: oregon
     buildCommand: pip install -r Backend/requirements.txt
-    startCommand: gunicorn -w 1 -k uvicorn.workers.UvicornWorker Backend.main:app --bind 0.0.0.0:8000
+    startCommand: gunicorn -w 1 -k uvicorn.workers.UvicornWorker Backend.app:app --bind 0.0.0.0:8000
     envVars:
       - key: PORT
         value: 8000
