--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: glaucoma-backend
     env: python
     region: oregon
-    buildCommand: pip install -r Backend/requirements.txt
+    buildCommand: pip install -r requirements.txt
     startCommand: gunicorn -w 1 -k uvicorn.workers.UvicornWorker Backend.app:app --bind 0.0.0.0:8000
     envVars:
       - key: PORT
