--- a/Backend/Procfile
+++ b/Backend/Procfile
@@ -1,1 +1,1 @@
-web: sh -c “cd Backend && uvicorn main:app -—host 0.0.0.0 —-port \$PORT”
+web: sh -c “cd Backend && uvicorn app:app -—host 0.0.0.0 —-port \$PORT”
