--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -33,8 +33,9 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.2"
+    "autoprefixer": "10.4.14",
+    "postcss": "8.4.21",
+    "postcss-preset-env": "7.8.3",
+    "tailwindcss": "3.3.2"
   }
 }
