--- a/Frontend/netlify.toml
+++ b/Frontend/netlify.toml
@@ -1,3 +1,8 @@
 [build]
-  command = "cd Frontend && npm install && npm run build"
-  publish = "Frontend/build"
+  command = "npm run build"
+  publish = "build"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
