--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  command = "npm run build"
-  publish = "build"
+  command = "cd frontend && npm run build"
+  publish = "frontend/build"
 
 [[redirects]]
   from = "/*"
