--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,9 +1,8 @@
-fastapi
-uvicorn
-gunicorn
-tensorflow-cpu
-pillow
-python-multipart
-fastapi-cors
-huggingface-hub
-numpy
+fastapi==0.95.2
+uvicorn==0.22.0
+numpy==1.24.3
+pillow==10.0.0
+tensorflow-cpu==2.12.0  # o tensorflow si necesitas GPU
+huggingface-hub==0.16.4
+python-multipart==0.0.6
+types-pillow==9.4.0.19  # Para type hints
