--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,8 +1,7 @@
-# Versiones exactas compatibles
 fastapi==0.95.2
 uvicorn==0.22.0
 numpy==1.24.3
-pillow==9.5.0  # Versión más estable
+pillow==9.5.0
 tensorflow-cpu==2.12.0
 huggingface-hub==0.16.4
 python-multipart==0.0.6
